tests/NormalTests/paczka1/small_fuzzy/27689770.err
Error in line 3: jkWpCDG A97 208,71
Error in line 1: jkWpCDG A97 49,9
Error in line 6: 0OZxDk1 A97 33,5
Error in line 7: 0OZxDk1 A103 6,6
Error in line 11: 0OZxDk1 A97 19,4
Error in line 5: jkWpCDG A103 68,4
Error in line 15: Qbnae A103 20,4
